--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.datasource.url: jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME}
 spring.datasource.username: ${DB_USER}
 spring.datasource.password: ${DB_PASSWORD}
+spring.thymeleaf.cache: false
