--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -1,10 +1,12 @@
-NotEmpty.appUserForm.userName: User name is required
-NotEmpty.appUserForm.name: First Name is required
-NotEmpty.appUserForm.password: Password is required
-NotEmpty.appUserForm.confirmPassword: Confirm Password is required
-NotEmpty.appUserForm.gender: Gender is required
+NotEmpty.user.userName: User name is required
+NotEmpty.user.name: Name is required
+NotEmpty.user.password: Password is required
+NotEmpty.user.gender: Gender is required
+NotEmpty.user.address: Address is required
+NotEmpty.user.type: User type is required
+NotEmpty.user.salary: Salary is required
+NotEmpty.user.roles: At least on role is required
+NotEmpty.user.level: Class is required
  
-Pattern.appUserForm.email: Invalid email
-Duplicate.appUserForm.email: Email has been used by another account
-Duplicate.appUserForm.userName: Username is not available
-Match.appUserForm.confirmPassword: Password does not match the confirm password
+Duplicate.user.userName: Username is not available
+Match.user.confirmPassword: Password does not match the confirm password
